This file is part of WordPress theme named Manduca - focus on accessibility.

Copyright (C) 2015-2018  Zsolt Edelényi (ezs@web25.hu)

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
in /assets/docs/licence.txt.  If not, see <https://www.gnu.org/licenses/>.

............................................................................

Version number
   Date           Github commit marker           Description

............................................................................

19.1

   19 Dec 2018    'add GNU notices'             Add GNU notices to the beggining of some files.
                                                This commit also inlcludes some files missed out from previous commit (i.e. belong to version 18.12)
   
   19 Dec 2018    'enhance accessible tabs'     Make accessible tabs more reliable by creating own template (previously used content-page.php).
   
   19 Dec 2018    'docs of accessible tabs'     Add How to documents to use accessible tabs