@@ -1,0 +1,58 @@
+/* classic slising doors example css as seen on http://www.alistapart.com/articles/slidingdoors/*/
+
+  .tabs {
+    /*float:left;*/
+    width:100%;
+    }
+  .tabs .tabs-list {
+    margin:14px 0;
+    padding:10px 10px 0;
+    list-style:none;
+    }
+  .tabs .tabs-list li {
+    float:left;
+    background-color: #f2f2f2;
+    padding:5px 15px 4px 15px;
+    margin:0;
+    border-top: 1px solid #e8e8e8;
+    border-left: 1px solid #e8e8e8;
+    }
+    .tabs .tabs-list li:last-child {
+      border-right: 1px solid #e8e8e8;
+    }
+  .tabs .tabs-list a {
+    font-size: 110%;
+    font-weight:bold;
+    }
+  /* Commented Backslash Hack
+     hides rule from IE5-Mac \*/
+  .tabs .tabs-list a {float:none;}
+  /* End IE5-Mac hack */
+  
+  .tabs .tabs-list .current {
+    background-color: inherit;
+    border-width:0;
+    }
+  .tabs .tabs-list .current a {
+    color:#333;
+    padding-bottom:5px;
+    border-bottom: 0;
+    }
+.tabs .tabs-list .current {
+  border-top: 3px #e8e8e8 solid;  
+}
+
+/* Originaly it was only when js was active. */
+
+    .tabs .current-info,
+    .tabs .accessibletabsanchor,
+    .tabs .tabhead /*position each individual tab's heading (default class .tabhead) off-screen*/ {
+        position:absolute;
+        left:-999em;
+    }
+    .tabs .content{
+        clear:both;
+        margin:3em 1em 1em 1em;
+    }
+    
+  
